# laserlag

./: .gitignore  CMakeLists.txt  README.md  makefile  style_guide.md
doc/: Doxyfile
minkowski/: CMakeLists.txt  README.md
minkowski/include/: minkowski.hpp  point.hpp  vector.hpp  worldline.hpp
minkowski/src/: point.cpp  vector.cpp  world_line.cpp  worldline.cpp
minkowski/tests/: CMakeLists.txt  test_point.cpp  test_vector.cpp  test_world_line.cpp  test_worldline.cpp
poincare/: CMakeLists.txt  ISSUES.md  README.md
poincare/examples/: CMakeLists.txt  camera_example.cpp  controlls_example.cpp  controls_example.cpp  object_manager_example.cpp  render_2d_and_3d_example.cpp  sprite_example.cpp  two_windows_example.cpp  two_windows_sprite_example.cpp  window_example.cpp
poincare/examples/resources/: basic.fs  basic.vs  basic.vsprite  event.gs  event.vs  light_cone.fs  light_cone.gs  light_cone.vs  light_cone.vsprite  object.fs  object.vs  vertex.shader  vertex3d.shader  world_line.gs  world_line.vs
poincare/include/: camera.hpp  camera.hpp.save  camera2d.hpp  camera3d.hpp  controls.hpp  frame_timer.hpp  massive_object.hpp  object_manager.hpp  poincare.hpp  shader.hpp  sprite.hpp  sprite_manager.hpp  update_logger.hpp  window.hpp  window_manager.hpp
poincare/src/: camera.cpp  camera2d.cpp  camera3d.cpp  controls.cpp  frame_timer.cpp  massive_object.cpp  object_manager.cpp  shader.cpp  sprite.cpp  sprite_manager.cpp  update_logger.cpp  window.cpp  window_manager.cpp
poincare/tests/: CMakeLists.txt  test_frame_timer.cpp  test_massive_object.cpp  test_shader.cpp  test_sprite.cpp  test_sprite_manager.cpp  test_update_logger.cpp  test_window.cpp  test_window_manager.cpp
theory/: README.md
